data/forge_javadoc/1.7.10/raw/net/minecraft/world/WorldSettings.GameType.md
---
title: "WorldSettings.GameType"
description: "public static enum WorldSettings.GameType extends java.lang.Enum<WorldSettings.GameType>"
package: "net/minecraft/world"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/world/WorldSettings.GameType.html"
sourceType: javadoc
---

# WorldSettings.GameType

**Inheritance:** java.lang.Object → java.lang.Enum<WorldSettings.GameType> → net.minecraft.world.WorldSettings.GameType

## Class signature

```java
public static enum WorldSettings.GameType extends java.lang.Enum<WorldSettings.GameType>
```

## Methods

- `void configurePlayerCapabilities(PlayerCapabilities p_77147_1_)`
- `static WorldSettings.GameType getByID(int p_77146_0_)`
- `static WorldSettings.GameType getByName(java.lang.String p_77142_0_)`
- `int getID()`
- `java.lang.String getName()`
- `boolean isAdventure()`
- `boolean isCreative()`
- `boolean isSurvivalOrAdventure()`
- `static WorldSettings.GameType valueOf(java.lang.String name)` — Returns the enum constant of this type with the specified name.
- `static WorldSettings.GameType [] values()` — Returns an array containing the constants of this enum type, in the order they are declared.
